color correction for dark mode

--- a/TASK_02_Portfolio-website/assets/css/style.css
+++ b/TASK_02_Portfolio-website/assets/css/style.css
@@ -520,7 +520,7 @@ h2{
     text-align: justify;
 }
 .ex-desc span{
-    color: rgba(0, 0, 0, 0.4);
+    color: #78788c;
 }
 
 /* skills */
